--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -39,6 +39,7 @@ jobs:
         run: |
           mkdir -p database
           touch database/database.sqlite
+          php artisan migrate --force
       - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
         env:
           DB_CONNECTION: sqlite
